--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="_lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
 </head>
@@ -14,7 +14,7 @@
                 <form class="form-signin" method="post" action="login.php">
                     <h2 class="form-signin-heading">Login</h2>
                     <label for="email" class="sr-only">E-mail</label>
-                    <input type="email" id="email" name="email" class="form-control" placeholder="Seu e-mail" required
+                    <input type="text" id="email" name="email" class="form-control" placeholder="Seu e-mail" required
                            autofocus>
                     <label for="senha" class="sr-only">Senha</label>
                     <input type="password" id="senha" name="senha" class="form-control" placeholder="Sua senha" required>
