Corrigido a escrita da palavra GitHub

--- a/modelos/footer.html
+++ b/modelos/footer.html
@@ -1,4 +1,4 @@
 <div class="container">
     <p class="text-muted text-center">Sistema de Gerenciamento de Projetos (Veja o código no <a
-            href="https://github.com/arthurHosang/file_explorer" target="_blank">Github</a>)</p>
+            href="https://github.com/arthurHosang/file_explorer" target="_blank">GitHub</a>)</p>
 </div>
